--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,13 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 packages = [
-    "dorplan", "dorplan.tests", "dorplan.tests.data.graph_coloring",
+    "dorplan", "dorplan.tests",
+    "dorplan.tests.data.graph_coloring",
+    "dorplan.tests.data.graph_coloring.core",
     "dorplan.tests.data.graph_coloring.data",
     "dorplan.tests.data.graph_coloring.schemas",
-    "dorplan.tests.data.graph_coloring.report"]
+    "dorplan.tests.data.graph_coloring.report",
+    "dorplan.tests.data.graph_coloring.solvers"]
 # This is a workaround for https://github.com/astral-sh/uv/issues/9513
 license-files = []
 
