--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dorplan"
 version = "0.1"
 description = "Desktop OR planner"
 requires-python = ">=3.10"
-dependencies = ["cornflow-client", "orloge", "PySide6", "networkx", "quarto", "quarto-cli", "papermill", "matplotlib"]
+dependencies = ["cornflow-client", "orloge", "PySide6", "networkx", "quarto", "papermill", "matplotlib"]
 authors= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
 maintainers= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
 readme='README.md'
