--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -23,4 +23,4 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Test
-      run: uv run python -m unittest discover -s dorplan.tests
+      run: uv run --group dev python -m unittest discover -s dorplan.tests
