--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dorplan"
 version = "0.1.3"
 description = "Desktop OR planner"
 requires-python = ">=3.10"
-dependencies = ["cornflow-client", "orloge", "PySide6"]
+dependencies = ["cornflow-client", "orloge", "PySide6", "pulp", "highspy", "ortools", "networkx"]
 authors= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
 maintainers= [{name= "Franco Peschiera", email= "pchtsp@gmail.com"}]
 readme='README.md'
@@ -17,7 +17,12 @@ classifiers= [
 urls= {source= "https://github.com/pchtsp/orloge", download="https://github.com/pchtsp/orloge/archive/master.zip"}
 
 [project.optional-dependencies]
-reports = ["networkx", "quarto", "quarto-cli", "papermill", "matplotlib"]
+reports = [
+    "quarto",
+    "quarto-cli; sys_platform == 'linux'",
+    "papermill",
+    "matplotlib"
+]
 
 
 [build-system]
@@ -32,9 +37,8 @@ packages = [
     "dorplan.tests.data.graph_coloring.data",
     "dorplan.tests.data.graph_coloring.schemas",
     "dorplan.tests.data.graph_coloring.report",
-    "dorplan.tests.data.graph_coloring.solvers"]
-# This is a workaround for https://github.com/astral-sh/uv/issues/9513
-license-files = []
+    "dorplan.tests.data.graph_coloring.solvers"
+]
 
 [tool.setuptools.package-data]
 "dorplan.tests.data.graph_coloring.data"= ["*"]
@@ -42,5 +46,4 @@ license-files = []
 "dorplan.tests.data.graph_coloring.schemas"= ["*.json"]
 
 [dependency-groups]
-# networkx, ortools, quarto are needed for testing with graphcoloring
-dev = ["black", "networkx", "ortools", "quarto"]
+dev = ["black"]
