added 2 more solvers, fixed error in a report.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ reports = [
     "papermill",
     "matplotlib"
 ]
-example = ["orloge", "pulp", "highspy", "ortools", "networkx"]
+example = ["orloge", "pulp", "highspy", "ortools", "networkx", "timefold", "pydantic"]
 
 [build-system]
 requires = ["setuptools"]
